--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 jwt:
   secret: ${JWT_SECRET}
-  token-validity-in-seconds: 3600000
+  token-validity-in-seconds: 86400000
 
 spring:
   application:
@@ -21,6 +21,7 @@ spring:
       client:
         registration:
           google:
+            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: profile, email
