--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ jwt:
   secret: ${JWT_SECRET}
   token-validity-in-seconds: 86400000
 
+google:
+  calendar:
+    credentials: src/main/resources/credentials.json
+
 spring:
   application:
     name: fuwarilog
@@ -32,7 +36,7 @@ spring:
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
