--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ jwt:
   secret: ${JWT_SECRET}
   token-validity-in-seconds: 86400000
 
+google:
+  map:
+    api-key: ${MAP_API_KEY}
+
 spring:
   application:
     name: fuwarilog
