--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,6 @@ jwt:
   secret: ${JWT_SECRET}
   token-validity-in-seconds: 86400000
 
-google:
-  calendar:
-    credentials: src/main/resources/credentials.json
-
 spring:
   application:
     name: fuwarilog
@@ -28,7 +24,10 @@ spring:
             redirect-uri: "http://localhost:8080/login/oauth2/code/google"
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope: profile, email
+            scope:
+            - profile
+            - email
+            - https://www.googleapis.com/auth/calendar
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/auth
