FEAT #13 : 카프카 환경 코드 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,11 +48,10 @@ spring:
             authorization-uri: https://accounts.google.com/o/oauth2/auth
             token-uri: https://oauth2.googleapis.com/token
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
-
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: exchange-rate-group
+      group-id: fuwarilog-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
@@ -60,6 +59,7 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      bootstrap-servers: localhost:9092
 
 management:
   endpoints:
