FEAT #13 : spring서버 kafka producer, consumer 기본 코드 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,10 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       bootstrap-servers: localhost:9092
 
+exchange:
+  api:
+    key: ${EXCHANGE_API_KEY}
+
 management:
   endpoints:
     web:
