--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+
         <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
