--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,12 +50,14 @@ spring:
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
   kafka:
     bootstrap-servers: localhost:9092
-    consumer:
-      group-id: fuwarilog-group
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring.json.trusted.packages: '*'
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
 
 exchange:
   api:
